# zlzold

./: README.md
app/: build.gradle
app/src/androidTest/java/com/zxj/zlz/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: index.html
app/src/main/cpp/: CMakeLists.txt  hpsocket.cpp
app/src/main/java/com/zxj/utils/: Jni.java
app/src/main/java/com/zxj/zlz/: Blog.java  BlogPaper.java  BlogsAdapter.java  FragmentBlogs.java  FragmentHome.java  FragmentMine.java  Jni.java  MainActivity.java  MyBlogsRecyclerViewAdapter.java  Wheel.java
app/src/main/java/com/zxj/zlz/ui/blog/: Blog.java  BlogPaper.java  BlogsAdapter.java  FragmentBlogs.java
app/src/main/java/com/zxj/zlz/ui/home/: FragmentHome.java  HTML5WebView.java  OtherControl.java  RemoteControl.java  Wheel.java
app/src/main/java/com/zxj/zlz/ui/mine/: FragmentMine.java
app/src/main/res/layout/: activity_blog_paper.xml  activity_main.xml  activity_other_control.xml  activity_remote_control.xml  custom_screen.xml  fragment_blogs_item.xml  fragment_blogs_list.xml  fragment_home.xml  fragment_mine.xml  video_loading_progress.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml  themes.xml
app/src/test/java/com/zxj/zlz/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
